--- a/src/main/resources/com/danny/slaccess/hello-view.fxml
+++ b/src/main/resources/com/danny/slaccess/hello-view.fxml
@@ -2,14 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="219.0" prefWidth="374.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="219.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.danny.slaccess.controller.HelloController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="74.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="321.0" minWidth="10.0" prefWidth="221.0" />
@@ -19,17 +21,25 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
+      <Label fx:id="passLabel" text="Password: " translateY="35.0" visible="false" GridPane.halignment="RIGHT" />
       <Label text="User ID: " GridPane.halignment="RIGHT" />
-      <TextField fx:id="loginID" GridPane.columnIndex="1" />
-      <Button fx:id="LoginButton" mnemonicParsing="false" text="Login" GridPane.columnIndex="2" GridPane.halignment="LEFT">
+      <TextField fx:id="userIDField" GridPane.columnIndex="1" />
+      <Button fx:id="LoginButton" mnemonicParsing="false" onAction="#loginButtonPressed" text="Enter" GridPane.columnIndex="2" GridPane.halignment="LEFT">
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
       </Button>
-      <Label prefHeight="59.0" prefWidth="222.0" text="SUN LAB ACCESS PORTAL" textAlignment="CENTER" translateY="10.0" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+      <Label prefHeight="90.0" prefWidth="222.0" text="SUN LAB ACCESS PORTAL" textAlignment="CENTER" translateY="10.0" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
+      <CheckBox fx:id="adminCheck" mnemonicParsing="false" onAction="#adminCheckPressed" text="Admin" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" />
+         </GridPane.margin>
+      </CheckBox>
+      <PasswordField fx:id="passField" translateY="35.0" visible="false" GridPane.columnIndex="1" />
+      <Label fx:id="loginMessage" translateY="75.0" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
    </children>
 </GridPane>
