Turns out I misread the project details.
I created the Access Table with just the user ID and Scan In Time because that's how the actual PSU Harrisburg Sun Lab functions.

However, the projected wanted an In AND Out time, so I had to fix the login screen and update the tables as needed.

--- a/src/main/resources/com/danny/slaccess/hello-view.fxml
+++ b/src/main/resources/com/danny/slaccess/hello-view.fxml
@@ -24,7 +24,7 @@
       <Label fx:id="passLabel" text="Password: " translateY="35.0" visible="false" GridPane.halignment="RIGHT" />
       <Label text="User ID: " GridPane.halignment="RIGHT" />
       <TextField fx:id="userIDField" GridPane.columnIndex="1" />
-      <Button fx:id="LoginButton" mnemonicParsing="false" onAction="#loginButtonPressed" text="Enter" GridPane.columnIndex="2" GridPane.halignment="LEFT">
+      <Button fx:id="LoginButton" mnemonicParsing="false" onAction="#loginButtonPressed" text="Scan" GridPane.columnIndex="2" GridPane.halignment="LEFT">
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
