--- a/src/main/resources/com/danny/slaccess/user-view.fxml
+++ b/src/main/resources/com/danny/slaccess/user-view.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,9 +20,9 @@
          <children>
             <GridPane prefHeight="955.0" prefWidth="1600.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="877.0" minWidth="10.0" prefWidth="676.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="982.0" minWidth="10.0" prefWidth="560.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="677.0" minWidth="10.0" prefWidth="310.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="891.0" minWidth="10.0" prefWidth="661.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="982.0" minWidth="10.0" prefWidth="549.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="677.0" minWidth="0.0" prefWidth="389.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints maxHeight="445.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
@@ -49,14 +53,90 @@
                       <RowConstraints maxHeight="423.0" minHeight="10.0" prefHeight="161.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0">
+                        <TableView fx:id="clientUserTable" prefHeight="200.0" prefWidth="200.0">
                           <columns>
                             <TableColumn prefWidth="178.0" text="User ID" />
                             <TableColumn prefWidth="208.0" text="Name" />
                               <TableColumn prefWidth="191.0" text="Type" />
-                              <TableColumn prefWidth="152.0" sortType="DESCENDING" text="Authorized" />
+                              <TableColumn prefWidth="87.0" sortType="DESCENDING" text="Authorized" />
                           </columns>
                         </TableView>
+                        <GridPane GridPane.rowIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="342.0" minWidth="10.0" prefWidth="88.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="640.0" minWidth="10.0" prefWidth="606.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="User ID" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <Label text="Name" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                              <Label text="Type" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                              <Label text="Authorized" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                              <GridPane GridPane.columnIndex="1">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="462.0" minWidth="10.0" prefWidth="380.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="226.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField fx:id="InfoUserField" />
+                                    <Button fx:id="InfoIDSearch" mnemonicParsing="false" text="Search by User ID" GridPane.columnIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" />
+                                       </GridPane.margin>
+                                    </Button>
+                                 </children>
+                              </GridPane>
+                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="475.0" minWidth="10.0" prefWidth="323.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="582.0" minWidth="10.0" prefWidth="283.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <CheckBox fx:id="InfoAuthCheckBox" mnemonicParsing="false" />
+                                    <Button fx:id="InfoAuthApply" mnemonicParsing="false" text="Apply" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" right="10.0" />
+                                       </GridPane.margin>
+                                    </Button>
+                                 </children>
+                              </GridPane>
+                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="380.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="308.0" minWidth="10.0" prefWidth="226.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField fx:id="InfoTypeField" editable="false" />
+                                 </children>
+                              </GridPane>
+                              <GridPane fx:id="InfoNameField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="380.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="226.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField editable="false" prefHeight="25.0" prefWidth="271.0" />
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </GridPane>
                      </children>
                   </GridPane>
                   <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -64,15 +144,18 @@
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="808.0" minHeight="10.0" prefHeight="802.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="808.0" minHeight="10.0" prefHeight="808.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="808.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0">
+                        <TableView fx:id="clientAccessTable" prefHeight="200.0" prefWidth="200.0">
                           <columns>
-                            <TableColumn prefWidth="199.0" text="User ID" />
-                            <TableColumn prefWidth="423.0" sortType="DESCENDING" text="Scan In Time" />
+                            <TableColumn prefWidth="174.0" text="User ID" />
+                            <TableColumn prefWidth="175.0" sortType="DESCENDING" text="Scan In Time" />
+                              <TableColumn prefWidth="199.0" text="Scan Out Time" />
                           </columns>
                         </TableView>
+                        <Button mnemonicParsing="false" prefWidth="200.0" text="Refresh Table" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
                </children>
