--- a/src/main/resources/com/danny/slaccess/user-view.fxml
+++ b/src/main/resources/com/danny/slaccess/user-view.fxml
@@ -55,10 +55,10 @@
                      <children>
                         <TableView fx:id="clientUserTable" prefHeight="200.0" prefWidth="200.0">
                           <columns>
-                            <TableColumn prefWidth="178.0" text="User ID" />
-                            <TableColumn prefWidth="208.0" text="Name" />
-                              <TableColumn prefWidth="191.0" text="Type" />
-                              <TableColumn prefWidth="87.0" sortType="DESCENDING" text="Authorized" />
+                            <TableColumn fx:id="infoIdColumn" editable="false" prefWidth="178.0" text="User ID" />
+                            <TableColumn fx:id="infoNameColumn" editable="false" prefWidth="208.0" text="Name" />
+                              <TableColumn fx:id="infoTypeColumn" editable="false" prefWidth="191.0" text="Type" />
+                              <TableColumn fx:id="infoAuthColumn" editable="false" prefWidth="87.0" sortType="DESCENDING" text="Authorized" />
                           </columns>
                         </TableView>
                         <GridPane GridPane.rowIndex="1">
@@ -87,7 +87,7 @@
                                 </rowConstraints>
                                  <children>
                                     <TextField fx:id="InfoUserField" />
-                                    <Button fx:id="InfoIDSearch" mnemonicParsing="false" text="Search by User ID" GridPane.columnIndex="1">
+                                    <Button fx:id="InfoIDSearch" mnemonicParsing="false" onAction="#InfoIDButtonClick" text="Search by User ID" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets left="10.0" />
                                        </GridPane.margin>
@@ -96,15 +96,15 @@
                               </GridPane>
                               <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="475.0" minWidth="10.0" prefWidth="323.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="582.0" minWidth="10.0" prefWidth="283.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="475.0" minWidth="10.0" prefWidth="233.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="582.0" minWidth="10.0" prefWidth="357.0" />
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <CheckBox fx:id="InfoAuthCheckBox" mnemonicParsing="false" />
-                                    <Button fx:id="InfoAuthApply" mnemonicParsing="false" text="Apply" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                                    <CheckBox fx:id="InfoAuthCheckBox" disable="true" mnemonicParsing="false" />
+                                    <Button fx:id="InfoAuthApply" mnemonicParsing="false" onAction="#ApplyButtonClick" text="Toggle Authorization" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
@@ -120,10 +120,14 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <TextField fx:id="InfoTypeField" editable="false" />
+                                    <TextField fx:id="InfoTypeField" disable="true" />
+                                    <Label fx:id="UserTableMessage" GridPane.columnIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" />
+                                       </GridPane.margin></Label>
                                  </children>
                               </GridPane>
-                              <GridPane fx:id="InfoNameField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="380.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="226.0" />
@@ -132,7 +136,7 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <TextField editable="false" prefHeight="25.0" prefWidth="271.0" />
+                                    <TextField fx:id="InfoNameField" disable="true" prefHeight="25.0" prefWidth="271.0" />
                                  </children>
                               </GridPane>
                            </children>
@@ -150,12 +154,21 @@
                      <children>
                         <TableView fx:id="clientAccessTable" prefHeight="200.0" prefWidth="200.0">
                           <columns>
-                            <TableColumn prefWidth="174.0" text="User ID" />
-                            <TableColumn prefWidth="175.0" sortType="DESCENDING" text="Scan In Time" />
-                              <TableColumn prefWidth="199.0" text="Scan Out Time" />
+                            <TableColumn fx:id="accessIdColumn" editable="false" prefWidth="174.0" text="User ID" />
+                            <TableColumn fx:id="accessInColumn" editable="false" prefWidth="175.0" sortType="DESCENDING" text="Scan In Time" />
+                              <TableColumn fx:id="accessOutColumn" editable="false" prefWidth="199.0" text="Scan Out Time" />
                           </columns>
                         </TableView>
-                        <Button mnemonicParsing="false" prefWidth="200.0" text="Refresh Table" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <Button fx:id="RefreshButton" mnemonicParsing="false" onAction="#RefreshButtonClick" prefWidth="200.0" text="Load Tables" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <GridPane.margin>
+                              <Insets right="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#LogoutButtonClick" text="Log Out" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Button>
                      </children>
                   </GridPane>
                </children>
