--- a/src/main/resources/com/danny/slaccess/user-view.fxml
+++ b/src/main/resources/com/danny/slaccess/user-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -58,7 +59,7 @@
                             <TableColumn fx:id="infoIdColumn" editable="false" prefWidth="178.0" text="User ID" />
                             <TableColumn fx:id="infoNameColumn" editable="false" prefWidth="208.0" text="Name" />
                               <TableColumn fx:id="infoTypeColumn" editable="false" prefWidth="191.0" text="Type" />
-                              <TableColumn fx:id="infoAuthColumn" editable="false" prefWidth="87.0" sortType="DESCENDING" text="Authorized" />
+                              <TableColumn fx:id="infoAuthColumn" editable="false" prefWidth="81.0" sortType="DESCENDING" text="Authorized" />
                           </columns>
                         </TableView>
                         <GridPane GridPane.rowIndex="1">
@@ -156,7 +157,7 @@
                           <columns>
                             <TableColumn fx:id="accessIdColumn" editable="false" prefWidth="174.0" text="User ID" />
                             <TableColumn fx:id="accessInColumn" editable="false" prefWidth="175.0" sortType="DESCENDING" text="Scan In Time" />
-                              <TableColumn fx:id="accessOutColumn" editable="false" prefWidth="199.0" text="Scan Out Time" />
+                              <TableColumn fx:id="accessOutColumn" editable="false" prefWidth="195.0" text="Scan Out Time" />
                           </columns>
                         </TableView>
                         <Button fx:id="RefreshButton" mnemonicParsing="false" onAction="#RefreshButtonClick" prefWidth="200.0" text="Load Tables" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
@@ -169,6 +170,95 @@
                               <Insets left="10.0" />
                            </GridPane.margin>
                         </Button>
+                     </children>
+                  </GridPane>
+                  <GridPane GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="280.0" minHeight="0.0" prefHeight="46.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="700.0" minHeight="0.0" prefHeight="115.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="766.0" minHeight="10.0" prefHeight="485.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="766.0" minHeight="10.0" prefHeight="212.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Filters" underline="true" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <GridPane GridPane.rowIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <CheckBox fx:id="filterIDCheckbox" mnemonicParsing="false" onAction="#filterIDCheckboxClick" text="User ID">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" />
+                                 </GridPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="filterDateCheckbox" mnemonicParsing="false" onAction="#filterDateCheckboxClick" text="Date" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" />
+                                 </GridPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="filterTimeCheckbox" disable="true" mnemonicParsing="false" onAction="#filterTimeCheckboxClick" text="Time" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" />
+                                 </GridPane.margin>
+                              </CheckBox>
+                           </children>
+                        </GridPane>
+                        <GridPane GridPane.rowIndex="2">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="293.0" minHeight="10.0" prefHeight="161.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="324.0" minHeight="10.0" prefHeight="324.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="55.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="334.0" minWidth="10.0" prefWidth="334.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints maxHeight="142.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="239.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="239.0" minHeight="10.0" prefHeight="61.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField fx:id="filterIDField" disable="true" maxWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
+                                    <Label text="User ID " GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                                    <Label text="Date" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                    <DatePicker fx:id="filterDateField" disable="true" maxWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label text="Time" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                                    <TextField fx:id="filterTimeField" disable="true" maxWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                 </children>
+                              </GridPane>
+                              <Button fx:id="filterApplyButton" maxWidth="200.0" mnemonicParsing="false" onAction="#filterApplyButtonClick" text="Apply Filter" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                                 <GridPane.margin>
+                                    <Insets left="55.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button fx:id="filterRemoveButton" maxWidth="200.0" mnemonicParsing="false" onAction="#filterRemoveButtonClick" text="Remove Filter" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                                 <GridPane.margin>
+                                    <Insets left="55.0" top="50.0" />
+                                 </GridPane.margin>
+                              </Button>
+                           </children>
+                        </GridPane>
                      </children>
                   </GridPane>
                </children>
