--- a/src/main/resources/com/danny/slaccess/user-view.fxml
+++ b/src/main/resources/com/danny/slaccess/user-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -217,6 +218,13 @@
                                     <Insets left="10.0" />
                                  </GridPane.margin>
                               </CheckBox>
+                              <RadioButton fx:id="filterInButton" mnemonicParsing="false" onAction="#filterInButtonClick" selected="true" text="Scan In Time" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <RadioButton fx:id="filterOutButton" mnemonicParsing="false" onAction="#filterOutButtonClick" text="Scan Out Time" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Date Filter Options" underline="true" GridPane.columnIndex="1">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </Label>
                            </children>
                         </GridPane>
                         <GridPane GridPane.rowIndex="2">
@@ -257,6 +265,7 @@
                                     <Insets left="55.0" top="50.0" />
                                  </GridPane.margin>
                               </Button>
+                              <Label fx:id="filterMessage" translateX="-40.0" translateY="-30.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                            </children>
                         </GridPane>
                      </children>
